--- a/index.html
+++ b/index.html
@@ -1,83 +1,133 @@
-import pygame
-import sys
+<!DOCTYPE html>
+<html lang="he">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>משחק כפל</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f8ff;
+    }
+    .container {
+      max-width: 600px;
+      margin: 50px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+    h1 {
+      color: #333;
+    }
+    .question {
+      font-size: 24px;
+      margin: 20px 0;
+    }
+    .input-container {
+      margin: 20px 0;
+    }
+    input[type="number"] {
+      padding: 10px;
+      font-size: 18px;
+      width: 100px;
+      text-align: center;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 18px;
+      background-color: #4caf50;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+    .result {
+      margin: 20px 0;
+      font-size: 20px;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>משחק כפל</h1>
+    <div class="question" id="question">...</div>
+    <div class="input-container">
+      <input type="number" id="answer" placeholder="הכנס תשובה">
+      <button onclick="checkAnswer()">שלח תשובה</button>
+    </div>
+    <div class="result" id="result"></div>
+    <button onclick="startGame()">התחל מחדש</button>
+  </div>
 
-# Initialize Pygame
-pygame.init()
+  <script>
+    let num1, num2;
+    let score = 0;
+    let questionCount = 0;
+    const maxQuestions = 5;
 
-# Screen dimensions
-SCREEN_WIDTH, SCREEN_HEIGHT = 800, 600
-screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))
-pygame.display.set_caption("Simple Shooting Game")
+    function generateQuestion() {
+      while (true) {
+        num1 = Math.floor(Math.random() * 10) + 1; // מספר מ-1 עד 10
+        num2 = Math.floor(Math.random() * 10) + 1; // מספר מ-1 עד 10
+        if (num1 * num2 <= 100) {
+          break;
+        }
+      }
+    }
 
-# Colors
-WHITE = (255, 255, 255)
-BLACK = (0, 0, 0)
-RED = (255, 0, 0)
+    function displayQuestion() {
+      document.getElementById("question").innerText = `מה התוצאה של ${num1} כפול ${num2}?`;
+      document.getElementById("result").innerText = "";
+      document.getElementById("answer").value = "";
+    }
 
-# Clock
-clock = pygame.time.Clock()
+    function checkAnswer() {
+      const userAnswer = parseInt(document.getElementById("answer").value);
+      if (isNaN(userAnswer)) {
+        document.getElementById("result").innerText = "אנא הכנס מספר חוקי.";
+        return;
+      }
 
-# Player setup
-player = pygame.Rect(100, 250, 50, 50)
-player_speed = 5
+      const correctAnswer = num1 * num2;
+      if (userAnswer === correctAnswer) {
+        document.getElementById("result").innerText = "תשובה נכונה! כל הכבוד!";
+        score++;
+      } else {
+        document.getElementById("result").innerText = `טעות! התשובה הנכונה היא ${correctAnswer}.`;
+      }
 
-# Enemy setup
-enemy = pygame.Rect(600, 250, 50, 50)
-enemy_alive = True
+      questionCount++;
+      if (questionCount < maxQuestions) {
+        generateQuestion();
+        displayQuestion();
+      } else {
+        endGame();
+      }
+    }
 
-# Bullet setup
-bullet_width, bullet_height = 10, 5
-bullets = []
-bullet_speed = 10
+    function startGame() {
+      score = 0;
+      questionCount = 0;
+      generateQuestion();
+      displayQuestion();
+    }
 
-# Game loop
-running = True
-while running:
-    screen.fill(WHITE)
+    function endGame() {
+      document.getElementById("question").innerText = "סיימת את המשחק!";
+      document.getElementById("result").innerText = `הניקוד שלך: ${score} מתוך ${maxQuestions}.`;
+      document.getElementById("answer").value = "";
+    }
 
-    for event in pygame.event.get():
-        if event.type == pygame.QUIT:
-            running = False
-
-        # Shooting bullets
-        if event.type == pygame.KEYDOWN and event.key == pygame.K_SPACE:
-            bullets.append(pygame.Rect(player.x + player.width, player.y + player.height // 2 - bullet_height // 2, bullet_width, bullet_height))
-
-    # Player movement
-    keys = pygame.key.get_pressed()
-    if keys[pygame.K_UP] and player.top > 0:
-        player.y -= player_speed
-    if keys[pygame.K_DOWN] and player.bottom < SCREEN_HEIGHT:
-        player.y += player_speed
-
-    # Update bullets
-    for bullet in bullets[:]:
-        bullet.x += bullet_speed
-        if bullet.x > SCREEN_WIDTH:
-            bullets.remove(bullet)
-
-    # Check for collision with enemy
-    if enemy_alive:
-        for bullet in bullets:
-            if enemy.colliderect(bullet):
-                enemy_alive = False
-                bullets.remove(bullet)
-
-    # Draw player
-    pygame.draw.rect(screen, BLACK, player)
-
-    # Draw enemy
-    if enemy_alive:
-        pygame.draw.rect(screen, RED, enemy)
-
-    # Draw bullets
-    for bullet in bullets:
-        pygame.draw.rect(screen, BLACK, bullet)
-
-    # Refresh screen
-    pygame.display.flip()
-    clock.tick(60)
-
-pygame.quit()
-sys.exit()
-
+    // מתחיל את המשחק בעת טעינת הדף
+    startGame();
+  </script>
+</body>
+</html>
