--- a/index.html
+++ b/index.html
@@ -11,20 +11,27 @@
       margin: 0;
       padding: 0;
       background-color: #f0f8ff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
     .container {
       max-width: 600px;
-      margin: 50px auto;
-      padding: 20px;
       background-color: #fff;
+      padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      text-align: center;
     }
     h1 {
       color: #333;
+      margin-bottom: 20px;
     }
     .question {
-      font-size: 24px;
+      font-size: 28px;
+      font-weight: bold;
       margin: 20px 0;
     }
     .options {
