--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       text-align: center;
       margin: 0;
       padding: 0;
-      background-color: #f0f8ff;
+      background-color: #007bff; /* צבע כחול */
+      color: #fff; /* צבע טקסט לבן */
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -19,18 +20,19 @@
     }
     .container {
       max-width: 600px;
-      background-color: #fff;
+      background-color: #ffffff; /* צבע לבן */
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       text-align: center;
+      color: #333; /* טקסט כהה */
     }
     h1 {
-      color: #333;
+      color: #fff; /* כותרת בצבע לבן */
       margin-bottom: 20px;
     }
     .question {
-      font-size: 28px;
+      font-size: 48px; /* גופן גדול לשאלה */
       font-weight: bold;
       margin: 20px 0;
     }
@@ -56,19 +58,19 @@
     .result {
       margin: 20px 0;
       font-size: 20px;
-      color: #333;
+      color: #fff; /* צבע תוצאה לבן */
     }
     button {
       padding: 10px 20px;
       font-size: 18px;
-      background-color: #007bff;
+      background-color: #ff5722;
       color: #fff;
       border: none;
       border-radius: 5px;
       cursor: pointer;
     }
     button:hover {
-      background-color: #0056b3;
+      background-color: #e64a19;
     }
   </style>
 </head>
